--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 app:
   env: prod
   dcenter: 1
-  dtask: replace_to_dtask_host
+  dtask: 172.31.9.92
 
 logging:
   config: classpath:log4j2-prod.xml
